--- a/styles.css
+++ b/styles.css
@@ -16,32 +16,36 @@ footer {
   font-family: sans-serif;
 }
 
-.w {
+.a {
   background-image: url("images/tom1.png");
 }
 
-.a {
+.s {
   background-image: url("images/tom2.png");
 }
 
-.s {
+.d {
   background-image: url("images/tom3.png");
 }
 
-.d {
+.f {
   background-image: url("images/tom4.png");
 }
 
+.h {
+  background-image: url("images/kick.png");
+}
+
 .j {
+  background-image: url("images/closed-hi-hat.png");
+}
+
+.g {
   background-image: url("images/snare.png");
 }
 
 .k {
-  background-image: url("images/crash.png");
-}
-
-.l {
-  background-image: url("images/kick.png");
+  background-image: url("images/open-hi-hat.png");
 }
 
 .set {
